--- a/my-family/package.json
+++ b/my-family/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "express-jwt": "^5.3.1",
     "mongoose": "^5.4.14",
     "passport": "^0.4.0",
     "react": "^16.7.0",
