--- a/my-family/package.json
+++ b/my-family/package.json
@@ -3,11 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "express-session": "^1.15.6",
+    "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.14",
+    "morgan": "^1.9.1",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-strategy": "^1.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
